Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1014,6 +1014,7 @@
         "즉, Bogolon을 생성하면 Cooper pair가 파괴된다는 것을 의미한다. \n",
         "\n",
         "$$\n",
+        "\\require{mhchem}\n",
         "0 \\xleftarrow{b_{\\bf k\\uparrow}} \n",
         "\\begin{Bmatrix}\n",
         "\\text{Cooper pair}\\\\ \n",
@@ -1218,6 +1219,71 @@
       ],
       "metadata": {
         "id": "o9NqdvBj8Ho_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 고온에서의 전자의 입자 모델  \n",
+        "\n",
+        "![https://www.saburchill.com/physics/chapters/0037.html](https://www.saburchill.com/physics/images_EM/conduction_metals_03.jpg)\n",
+        "\n",
+        "고온에서의 전자는 lattice 자체와의 interaction으로 momentum이 변화되는 scattering을 겪는다. impurity나 crystal disorder도 마찬가지이다. 이렇게 변화된 전자의 momentum은 conductivity의 저항으로 작용한다.  \n",
+        "\n",
+        "하지만 절대0도에서는 상황이 다르다. Ground state에서 전자는 momentum을 갖지만 scattering될 수 없다. 왜냐하면 에너지를 얻을 수도, 더 낮은 에너지로 전이할 수도 없기 때문이다. 더 낮은 에너지는 이미 fermi sea에 의해서 다른 electron이 모두 차지하고 있기 때문이다. \n",
+        "\n",
+        "## Mean free path of free electron  \n",
+        "\n",
+        "Fermi surface에 있는 전자들 만이 conductance에 기여한다.  \n",
+        "따라서 전자의 mean free path를 $l=v_{\\bf F}\\tau$로 정의할 수 있다.  \n",
+        "상온 금속에서의 mean free path를 추정할 수 있으며 약 100Å이다. [^ref1]  \n",
+        "저온의 순수한 metal에서는 수 cm의 길이를 가질 수 있다.  \n",
+        "(저온에서의 fermi momentum은 약 1$Å^{-1}$ 이다.) [^ref2]\n",
+        "\n",
+        "[^ref1]: Since only electrons at the Fermi surface contribute to the conductance, we can define the mean free path of electrons as  $l=v_{\\bf F}\\tau$. We can make an estimate of the mean free path for metal at room temperature. This estimate gives a value of 100Å. So it is of the order of a few tens interatomic distances. At low temperatures for very pure metals the mean free path can be made as high as a few  \n",
+        "cm.   \n",
+        "    [mean free path](https://en.wikipedia.org/wiki/Free_electron_model#Mean_free_path)  \n",
+        "\n",
+        "[^ref2]: [Fermi momentum](https://unlcms.unl.edu/cas/physics/tsymbal/teaching/SSP-927/Section%2007_Free_Electron_Model.pdf)   \n",
+        "\n",
+        "\n",
+        "## Coherece lenth of Cooper pair\n",
+        "\n",
+        "금속 내의 전류에 기여하는 두 electron의 correlation length $r_0$는 다음과 같다.  \n",
+        "\n",
+        "$$\n",
+        "{1\\over r_0} = {1\\over\\xi_0} + {1\\over l}\n",
+        "$$\n",
+        "\n",
+        "여기서 길이 $\\xi_0$를 **coherence length**라고 부른다. BCS theory가 완성되고 난 후에 이 coherence length는 energy gap과 관련되어 있음을 알게 되었다.  \n",
+        "\n",
+        "$$\n",
+        "\\xi_0 = {\\hbar v_F \\over \\pi\\Delta}\n",
+        "$$\n",
+        "\n",
+        "이 coherence length는 BCS theory의 cooper pair bound state의 물리적 크기를 나타낸다는 의미를 갖는다. [^Annett]  \n",
+        "    cooper pair distance:  ~수백nm  \n",
+        "    atom distance of metal: ~수A    \n",
+        "\n",
+        "## impurity effect  \n",
+        "\n",
+        "Impurity는 $T_c$를 낮추는데 주로 기여한다.\n",
+        "\n",
+        "[Impurity Effects on the Superconducting Transition Temperature](https://unlcms.unl.edu/cas/physics/tsymbal/teaching/SSP-927/Section%2008_Electron_Transport.pdf)  \n",
+        "(fermi surface의 shift에 대한 good graph)\n",
+        "\n",
+        "## Dirty superconductor\n",
+        "\n",
+        "Mean free path가 짧은 superconductor에서 impurity나 disorder에 대한 여러 이론들이 있다 [^Kadin] [^Annett]\n",
+        "\n",
+        "[^Kadin]: In a “clean superconductor”, where the electron mean-free-path $l > \\xi_0$ , one indeed has $\\xi(T)\\sim \\xi_0$. However, in a disordered or “dirty superconductor” with $l < \\xi_0$, the situation is a bit more complicated [9]. One has instead $\\xi(T)\\sim (\\xi_0l)^{1/2}$, which seems inconsistent with a Cooper pair on the scale of $\\xi_0$. In fact, the pair wavefunction must be modified in the dirty limit, since the basis electron wavefunctions on this scale are no longer plane waves. Instead of ballistic motion in a straight line, the electronundergoes a random walk between elastic scattering centers. So an energy bandwidth on the scale of $\\Delta$ will lead to a smaller Cooper pair on the scale of $(\\xi_0l)^{1/2}$, with an internal microstructure that is more complicated than the simple layered structure of Fig. 1. However, one would still expect a spatial charge modulation and corresponding induced lattice charge, leading to a coherent wavefunction with a pairing energy that is essentially independent of $l$.  \n",
+        "    https://arxiv.org/pdf/cond-mat/0510279.pdf \n",
+        "\n",
+        "[^Annett]: It is a surprising and very important property of most superconductors that they can remain superconducting even when there are large numbers of impurities making the mean free path $l$ very short. In fact even many alloys are superconducting despite the strongly disordered atomic structure.  \n",
+        "    Annett Ch.1"
+      ],
+      "metadata": {
+        "id": "EMIfHa8I7_hM"
       }
     },
     {
@@ -1490,39 +1556,6 @@
         "\n",
         "\n",
         "\n",
-        "## impurity  \n",
-        "\n",
-        "**전자의 입자 모델**  \n",
-        "\n",
-        "![](https://www.saburchill.com/physics/images_EM/conduction_metals_03.jpg)\n",
-        "[충돌 그림](https://www.saburchill.com/physics/chapters/0037.html)  \n",
-        "\n",
-        "**mean free path of free electron**  \n",
-        "\n",
-        "Since only electrons at the Fermi surface contribute to the conductance, we can define the mean free  \n",
-        "path of electrons as  $l=v_{\\bf F}\\tau$. We can make an estimate of the mean free path for metal at room  \n",
-        "temperature. This estimate gives a value of 100Å. So it is of the order of a few tens interatomic  \n",
-        "distances. At low temperatures for very pure metals the mean free path can be made as high as a few  \n",
-        "cm.   \n",
-        "[mean free path](https://en.wikipedia.org/wiki/Free_electron_model#Mean_free_path)  \n",
-        "\n",
-        "**저온**  \n",
-        "\n",
-        "약 1$Å^{-1}$  \n",
-        "[Fermi momentum](https://unlcms.unl.edu/cas/physics/tsymbal/teaching/SSP-927/Section%2007_Free_Electron_Model.pdf)   \n",
-        "\n",
-        "\n",
-        "\n",
-        "**cooper pair**   \n",
-        "\n",
-        "cooper pair distance:  ~수백nm\n",
-        "atom distance of metal: ~수A  \n",
-        "\n",
-        "**impurity effect**  \n",
-        "\n",
-        "Impurity는 $T_c$를 낮추는데 주로 기여한다.\n",
-        "\n",
-        "[Impurity Effects on the Superconducting Transition Temperature](https://unlcms.unl.edu/cas/physics/tsymbal/teaching/SSP-927/Section%2008_Electron_Transport.pdf)  \n",
         "\n",
         "## Why attractive?\n",
         "\n",
