Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -669,6 +669,9 @@
         "\n",
         "이것은 통상적으로는 볼 수 없는 이상한 현상이다. 왜냐하면 interaction이 없는 두 자유전자의 에너지는 $2\\epsilon_\\mathbf k + 2\\epsilon_F$인데, 두 interacting 전자의 ground state 에너지는 $E + 2\\epsilon_F < 2\\epsilon_F $이기 때문이다. 아무리 interaction이 적더라도, $2\\epsilon_\\mathbf k$ 만큼의 에너지 저하가 일어났다고 볼 수 있다.  \n",
         "\n",
+        "특히 일반적인 3차원에서는 아주 작은 attractive force에서는 bound state를 형성할 수 없다.  (1차원과 2차원에서는 arbitarily small interaction에 대해서도 bound state가 존재한다.)   \n",
+        "Superconductor에서 weak interaction이 bound state를 만드는 이유는 전자의 energy가 fermi surface부근에만 존재하고 따라서 에너지 density가 $\\rho(\\epsilon)\\to \\rho(\\epsilon_F)$로서 2차원과 마찬가지로 constant가 되기 때문이다. (See **Appendix - Bounded states of weak potential**.)\n",
+        "\n",
         "\n",
         "[^MFYS]: MFYS - 2001WETSSP - Solid_State_Physics  \n",
         "    Finally, remember that the exchange hole weakens the  interactions. We already encountered this in the chapter on electrons and phonons, studying the effects of electron-electron interactions. These exchange interactions will also in the present case weaken the glue between electrons, but they are only present between electrons with the same spin. So, the attraction will be strongest if the electrons not only have opposite momentum, but also opposite spin.  \n",
@@ -1386,9 +1389,15 @@
         "=\\langle 0|H_I{1-P\\over E_0-H_0}H_I{1-P\\over E_0-H_0}H_I|0\\rangle\n",
         "$$\n",
         "ref:  \n",
-        "https://www.southampton.ac.uk/assets/centresresearch/documents/compchem/perturbation_theory.pdf  \n",
-        "\n",
-        "\n",
+        "https://www.southampton.ac.uk/assets/centresresearch/documents/compchem/perturbation_theory.pdf  \n"
+      ],
+      "metadata": {
+        "id": "MjMajsQlTWcL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## electron-electron scattering  \n",
         "\n",
         "$$\n",
@@ -1568,7 +1577,90 @@
         "   전자가 방출한 phonon을 흡수할 때 이 속도는 상당히 느리다. 따라서 첫번째 전자가 방출한 힘을 상당히 나중에 두번째 전자가 받게된다. 이 때문에 coulomb force의 영향력이 적어진다.  \n",
         "\n",
         "3. \n",
-        "Although Cooper pairing is a quantum effect, the reason for the pairing can be seen from a simplified classical explanation.[[2]](https://en.wikipedia.org/wiki/Cooper_pair#cite_note-Hyperphysics-2)[[3]](https://en.wikipedia.org/wiki/Cooper_pair#cite_note-3) An electron in a metal normally behaves as a free particle. The electron is repelled from other electrons due to their negative charge, but it also attracts the positive ions that make up the rigid lattice of the metal. This attraction distorts the ion lattice, moving the ions slightly toward the electron, increasing the positive charge density of the lattice in the vicinity. This positive charge can attract other electrons. At long distances, this attraction between electrons due to the displaced ions can overcome the electrons' repulsion due to their negative charge, and cause them to pair up. The rigorous quantum mechanical explanation shows that the effect is due to electron–phonon interactions, with the phonon being the collective motion of the positively-charged lattice.\n",
+        "Although Cooper pairing is a quantum effect, the reason for the pairing can be seen from a simplified classical explanation.[[2]](https://en.wikipedia.org/wiki/Cooper_pair#cite_note-Hyperphysics-2)[[3]](https://en.wikipedia.org/wiki/Cooper_pair#cite_note-3) An electron in a metal normally behaves as a free particle. The electron is repelled from other electrons due to their negative charge, but it also attracts the positive ions that make up the rigid lattice of the metal. This attraction distorts the ion lattice, moving the ions slightly toward the electron, increasing the positive charge density of the lattice in the vicinity. This positive charge can attract other electrons. At long distances, this attraction between electrons due to the displaced ions can overcome the electrons' repulsion due to their negative charge, and cause them to pair up. The rigorous quantum mechanical explanation shows that the effect is due to electron–phonon interactions, with the phonon being the collective motion of the positively-charged lattice.\n"
+      ],
+      "metadata": {
+        "id": "iy0x7J6xTi2n"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Bounded states of weak potential\n",
+        "\n",
+        "Scrodinger 방정식은 다음과 같다. (reduced mass  $\\mu={m\\over2}$)\n",
+        "\n",
+        "$$\n",
+        "\\left({1\\over m}{\\partial^2\\over\\partial x^2}+E\\right)\\psi(x) = V(x)\\psi(x)\n",
+        "$$\n",
+        "Fourier transform을 하면,\n",
+        "$$\n",
+        "\\begin{equation}\n",
+        "\\left({1\\over m}{\\partial^2\\over\\partial x^2}+E\\right)\\int{dp\\over2\\pi}e^{-ipx}\\psi(p) = \\int{dp\\over2\\pi}e^{-ipx}\\int dx'e^{ipx}V(x')\\psi(x')\\\\\n",
+        "\\left(-{p^2\\over m}+E\\right)\\psi(p) = \\int {dp'\\over2\\pi}V(p-p')\\psi(p')\\\\\n",
+        "\\psi(p) = -mV_0{1\\over p^2+k^2}\\int {dp'\\over2\\pi}\\psi(p')\\\\\n",
+        "-{k^2\\over m}\\equiv E\n",
+        "\\end{equation}\n",
+        "$$\n",
+        "양변을 p에 대해 적분하면 (self consistancy),\n",
+        "$$\n",
+        "-{1\\over V_0} = \\int {dp\\over2\\pi}{m\\over p^2+k^2}\\approx \\int_{p<{1\\over R}} {dp\\over2\\pi}{m\\over p^2+k^2}\n",
+        "$$\n",
+        "일반적으로 d차원에서는,\n",
+        "$$\n",
+        "\\begin{equation}\n",
+        "-{1\\over V_0} = \\int_{p<{1\\over R}} {dp^d\\over(2\\pi)^d}{m\\over p^2+k^2}\n",
+        "= \\int_{\\epsilon < E_R}d\\epsilon{\\rho_d(\\epsilon)/\\Omega\\over 2\\epsilon+|E|}\\\\\n",
+        "E_R\\equiv {\\hbar^2\\over mR^2}\n",
+        "\\end{equation}\n",
+        "$$\n",
+        "\n",
+        "여기서 weak potential $V_0\\sim VR^d$이고, $V_0$가 volume의 차원을 가지므로 $\\Omega$는 system의 volume이다. \n",
+        "\n",
+        "2차원에 대해 계산하면 다음과 같다.  \n",
+        "$$\n",
+        "\\begin{equation}\n",
+        "d^2p = 2\\pi p\\ dp \\\\\n",
+        "\\epsilon = {p^2\\over 2m} \\to p\\ dp = m\\ d\\epsilon \\\\\n",
+        "{d^2 p\\over(2\\pi)^2} = {m \\over2\\pi}\\ d\\epsilon \\equiv {\\rho_{2D}(\\epsilon)\\over\\Omega}d\\epsilon \\ \\to\\  {\\rho_{2D}(\\epsilon)\\over m\\Omega} = {1\\over2\\pi} =\\text{constant}\n",
+        "\\end{equation}\n",
+        "$$\n",
+        "\n",
+        "3차원에 대해 계산하면 다음과 같다. \n",
+        "\n",
+        "$$\n",
+        "{d^3p\\over(2\\pi)^3} = {1\\over (2\\pi)^3}4\\pi p^2\\ dp = {\\sqrt{2m\\epsilon}\\over2\\pi^2}m\\ d\\epsilon\\equiv{\\rho_{3D}(\\epsilon)\\over\\Omega}d\\epsilon \\\\\n",
+        "{\\rho_{3D}(\\epsilon)\\over m\\Omega} = {\\sqrt{2m\\epsilon}\\over2\\pi^2}\n",
+        "$$\n",
+        "\n",
+        "적분을 통하여 $-1/V_0$의 값을 구하면 다음과 같다. [^Ketterle]\n",
+        "\n",
+        "2차원:  \n",
+        "$$\n",
+        "-{1\\over V_0}= \\text{const.} \\log {2E_R + |E|\\over|E|}\n",
+        "$$\n",
+        "3차원:  \n",
+        "$$\n",
+        "-{1\\over V_0}=\\text{const.}\\left( \\sqrt{2E_R} - {\\pi\\over2}\\sqrt{|E|}\\right)\n",
+        "$$\n",
+        "\n",
+        "$|V_0|=-V_0\\to 0$일 경우 왼쪽항은 $+\\infty$로 발산한다.  \n",
+        "1차원과 2차원에서는 $-V_0=|V_0|$가 작더라도 그것을 만족시키는 $|E|$의 해가 존재하지만, 3차원에서는 존재하지 않는다.  \n",
+        "따라서 3차원에서 weak potential은 bounded state를 형성할 수 없다.  \n",
+        "\n",
+        "[^Ketterle]: Ketterle et.al, Making, probing and understanding ultracold Fermi gases arXiv:0801.2500  \n",
+        "    https://ocw.mit.edu/courses/physics/8-422-atomic-and-optical-physics-ii-spring-2013/readings/ Lecture 20."
+      ],
+      "metadata": {
+        "id": "FSvCsT8VTpeL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "## meissner effect \n",
         "\n",
