Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -345,12 +345,16 @@
         "S = \\sum_{\\bf k,q}g_{\\bf k,q}c^\\dagger_{\\bf k+q}c_{\\bf k}(x_{\\bf kq}a_{\\bf q}+y_{\\bf kq}a^\\dagger_{\\bf -q})\n",
         "$$\n",
         "\n",
-        " $$\n",
+        "추정된 $S$의 $x_{\\bf kq}, y_{\\bf kq}$를 구하기 위해 commutation 값을 계산한다.  \n",
+        "\n",
+        "$$\n",
+        "\\begin{equation}\n",
         "[H_e, S] = \\sum_{\\bf k,q}g_{\\bf k,q}(\\epsilon_{\\bf k+q}-\\epsilon_{\\bf k})\n",
         "c^\\dagger_{\\bf k+q}c_{\\bf k}(x_{\\bf kq}a_{\\bf q}+y_{\\bf kq}a^\\dagger_{\\bf -q})\\\\\n",
         "\\;[H_{ph}, S] = \\sum_{\\bf k,q}g_{\\bf k,q}\n",
         "c^\\dagger_{\\bf k+q}c_{\\bf k}\n",
         "(-x_{\\bf kq}\\omega_{\\bf q}a_{\\bf q}+y_{\\bf kq}\\omega_{\\bf -q}a^\\dagger_{\\bf -q})\n",
+        "\\end{equation}\n",
         "$$\n",
         "Using the relation $\\omega_{\\bf q}=\\omega_{\\bf -q}$,\n",
         "$$\n",
@@ -1077,7 +1081,11 @@
         "보통의 metal에서는 작은 양의 에너지를 물질에 전달함으로서 electron scattering이 일어나고 전류가 감소한다. \n",
         "Superconductor에서는 작은(infinitesimal) 양의 에너지를 전달 할 수 있으며, 유일한 방법은 Cooper pair를 파괴하는 것이다. 이를 위해서는 일정한 양 이상의 에너지가 필요하다. 이것이 소실(dissipation)이 없는 흐름의 기원이고 저항이 사라지게 된다. [^MFYS] [^ref1] [^ref2] [^ref3]\n",
         "\n",
-        "전류가 없는 상태에서는 net momentum이 0이지만 전류가 형성될 경우, BCS의 ground state는 모두 동일한 drift velocity($\\mathbf k_\\text{cm}$)를 갖게 된다. [^Bardeen]\n",
+        "전류가 없는 상태에서는 net momentum이 0이지만 전류가 형성될 경우, BCS의 ground state는 모두 동일한 drift velocity($\\mathbf k_\\text{cm}$)를 갖게 된다. [^Bardeen]  \n",
+        "\n",
+        "![](https://i.imgur.com/o0Q4GKz.png)\n",
+        "\n",
+        "전류에 기여하는 것은 \n",
         "\n",
         "[^Lancaster]: Lancaster chapter 44.4\n",
         "\n",
