Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -1083,9 +1083,15 @@
         "\n",
         "전류가 없는 상태에서는 net momentum이 0이지만 전류가 형성될 경우, BCS의 ground state는 모두 동일한 drift velocity($\\mathbf k_\\text{cm}$)를 갖게 된다. [^Bardeen]  \n",
         "\n",
-        "![](https://i.imgur.com/FVMKgmq.png)\n",
+        "![](https://i.imgur.com/FVMKgmq.png)  \n",
+        "**Fig. 3** (a) The Fermi sphere at equilibrium, (b) Displacement of the Fermi sphere due to an electric field. [^tsymbal]\n",
         "\n",
-        "전류에 기여하는 것은 \n",
+        "Suppercurrent에 기여하는 것은 Fermi surface근처의 BCS ground state뿐이아니라 Fermi sea 내부의 전자(free electron)들도 기여한다. 모두가 동일한 속도로 이동한다. 전자는 excite state와의 energy gap 때문에 scattering되지 않고 후자는 이미 모든 상태가 차 있기 때문에 scattering되지 않는다. [^Kadin]\n",
+        "\n",
+        "[^tsymbal]: The situation changes when a field is applied. If the field is in the positive x-direction, each electron\n",
+        "acquires a drift velocity, as given by Eq.(3). Thus the whole Fermi sphere is displaced to the left, as shown in Fig.3(b). Although the displacement is very small, and although the great majority of the electrons still cancel each other pairwise, some electrons - in the shaded crescent in the figure - remain uncompensated. It is these electrons which produce the observed current.  \n",
+        "    The very small displacement is due to a relatively small drift velocity. If we assume that the electric field is 0.1V/cm, we obtain the drift velocity of 1cm/s, which is by 8 orders in magnitude smaller the Fermi velocity of electrons.\n",
+        "    https://unlcms.unl.edu/cas/physics/tsymbal/teaching/SSP-927/index.shtml lecture 8 \n",
         "\n",
         "[^Lancaster]: Lancaster chapter 44.4\n",
         "\n",
@@ -1100,7 +1106,11 @@
         "\n",
         "[^ref2]:  [BCS theory energy gap](https://physics.stackexchange.com/questions/615559/bcs-theory-energy-gap)  \n",
         "\n",
-        "[^ref3]:  [What is the link between the BCS ground state and superconductivity?](https://physics.stackexchange.com/questions/339747/what-is-the-link-between-the-bcs-ground-state-and-superconductivity)  "
+        "[^ref3]:  [What is the link between the BCS ground state and superconductivity?](https://physics.stackexchange.com/questions/339747/what-is-the-link-between-the-bcs-ground-state-and-superconductivity)  \n",
+        "\n",
+        "[^Kadin]: \n",
+        "    The BCS ground state at T=0 consists of two classes of electrons: those deep inside the Fermi sea, which are essentially the same as those in the normal state, and those near the Fermi surface, which form the superposition of Cooper pairs. These latter electrons, the “frozen crust” at the top of the Fermi sea [3], cannot scatter because they are in a coherent state. The former electrons inside the sea cannot scatter because they are far from the surface. At T=0, all electrons of both classes contribute to the lossless supercurrent, ...  \n",
+        "    https://arxiv.org/pdf/cond-mat/0510279.pdf"
       ],
       "metadata": {
         "id": "lOciflHpTg0U"
@@ -1276,6 +1286,8 @@
         "    cooper pair distance:  ~수백nm  \n",
         "    atom distance of metal: ~수A    \n",
         "\n",
+        "Fermi energy가 $\\epsilon_F\\sim1\\text{ eV}$ 이고 energy gap이 $\\Delta\\sim 1 \\text{meV}$인 저온의 conventional superconductor에서 cooper pair의 effective volume내에는 약 $\\sim10^6$ 개의 cooper pair가 중첩되어 있다. [^Kadin2]  \n",
+        "\n",
         "## impurity effect  \n",
         "\n",
         "Impurity는 $T_c$를 낮추는데 주로 기여한다.\n",
@@ -1287,8 +1299,12 @@
         "\n",
         "Mean free path가 짧은 superconductor에서 impurity나 disorder에 대한 여러 이론들이 있다 [^Kadin] [^Annett]\n",
         "\n",
-        "[^Kadin]: In a “clean superconductor”, where the electron mean-free-path $l > \\xi_0$ , one indeed has $\\xi(T)\\sim \\xi_0$. However, in a disordered or “dirty superconductor” with $l < \\xi_0$, the situation is a bit more complicated [9]. One has instead $\\xi(T)\\sim (\\xi_0l)^{1/2}$, which seems inconsistent with a Cooper pair on the scale of $\\xi_0$. In fact, the pair wavefunction must be modified in the dirty limit, since the basis electron wavefunctions on this scale are no longer plane waves. Instead of ballistic motion in a straight line, the electronundergoes a random walk between elastic scattering centers. So an energy bandwidth on the scale of $\\Delta$ will lead to a smaller Cooper pair on the scale of $(\\xi_0l)^{1/2}$, with an internal microstructure that is more complicated than the simple layered structure of Fig. 1. However, one would still expect a spatial charge modulation and corresponding induced lattice charge, leading to a coherent wavefunction with a pairing energy that is essentially independent of $l$.  \n",
-        "    https://arxiv.org/pdf/cond-mat/0510279.pdf \n",
+        "[^Kadin]: \n",
+        "    In a “clean superconductor”, where the electron mean-free-path $l > \\xi_0$ , one indeed has $\\xi(T)\\sim \\xi_0$. However, in a disordered or “dirty superconductor” with $l < \\xi_0$, the situation is a bit more complicated [9]. One has instead $\\xi(T)\\sim (\\xi_0l)^{1/2}$, which seems inconsistent with a Cooper pair on the scale of $\\xi_0$. In fact, the pair wavefunction must be modified in the dirty limit, since the basis electron wavefunctions on this scale are no longer plane waves. Instead of ballistic motion in a straight line, the electronundergoes a random walk between elastic scattering centers. So an energy bandwidth on the scale of $\\Delta$ will lead to a smaller Cooper pair on the scale of $(\\xi_0l)^{1/2}$, with an internal microstructure that is more complicated than the simple layered structure of Fig. 1. However, one would still expect a spatial charge modulation and corresponding induced lattice charge, leading to a coherent wavefunction with a pairing energy that is essentially independent of $l$.  \n",
+        "    Kadin(2005) https://arxiv.org/pdf/cond-mat/0510279.pdf \n",
+        "\n",
+        "[^Kadin2]: Kadin(2005)\n",
+        "      \n",
         "\n",
         "[^Annett]: It is a surprising and very important property of most superconductors that they can remain superconducting even when there are large numbers of impurities making the mean free path $l$ very short. In fact even many alloys are superconducting despite the strongly disordered atomic structure.  \n",
         "    Annett Ch.1"
