Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -129,15 +129,15 @@
         "a^\\dagger|n\\rangle = \\sqrt{n+1}|n+1\\rangle\n",
         "$$\n",
         "\n",
-        "만일 $n$이 실수 (예를 들면 1.5)라면, 에너지는 0.5, -0.5, -1.5, ... 등으로 $a$를 적용하면서 무한대로 낮아질 수 있다. 이것은 시스템의 에너지가 계속 낮아지면서 외부로 무한대의 에너지를 공급할 수 있으므로, 해가 될 수 없다. 따라서 $n$은 정수이고, $n=0$일 때, ground state가 된다. \n",
+        "만일 $n$이 실수 (예를 들면 1.5)라면, 에너지는 0.5, -0.5, -1.5, ... 등으로 $a$를 적용하면서 무한대로 낮아질 수 있다. 이것은 시스템의 에너지가 계속 낮아지면서 외부로 무한대의 에너지를 공급할 수 있으므로, 해가 될 수 없다. 따라서 $n$은 정수이고, $n=0$일 때, ground state가 된다. [^ref1]\n",
         "\n",
         "<div>\n",
         "<img src=\"https://www.researchgate.net/profile/Ryan-Parker-10/publication/332370544/figure/fig2/AS:792192213843969@1565884750349/Diagram-to-represent-the-discrete-energy-levels-of-a-quantum-harmonic-oscillator-of.ppm\" width=\"500\"/>\n",
         "</div>\n",
         "\n",
         "\n",
-        "See details:  \n",
-        "https://www.mindnetwork.us/quantum-harmonic-oscillator-ladder-operators.html  \n",
+        "[^ref1]: See details:  \n",
+        "    https://www.mindnetwork.us/quantum-harmonic-oscillator-ladder-operators.html  \n",
         "\n"
       ],
       "metadata": {
@@ -179,7 +179,7 @@
         "\\end{align*}\n",
         "$$\n",
         "  \n",
-        "Fourier 변환을 이용하여 계산하면 다음과 같다.\n",
+        "Fourier 변환을 이용하여 계산하면 다음과 같다. [^Lancaster]  \n",
         "  \n",
         "$$\n",
         "\\sum_j p_j^2 = \\sum_k p_kp_{-k}\n",
@@ -207,8 +207,7 @@
         "a^\\dagger_ka_k+{1\\over2}\n",
         "\\right)\n",
         "$$\n",
-        "ref:  lancaster  \n",
-        "(error fixed in the definition of $a^\\dagger_k$)\n",
+        "\n",
         "\n",
         "## 3-dimensional phonon with vibration mode ($s$)\n",
         "\n",
@@ -282,8 +281,11 @@
         "\\end{align*}\n",
         "$$\n",
         "\n",
-        "![](https://www.researchgate.net/profile/Juan-Vasquez-Jaramillo-2/publication/331302522/figure/fig1/AS:729473951481860@1550931551693/Feynman-Diagram-with-Two-Electron-Lines-Emerging-and-entering-a-Vertex-Point-and-One.png)\n",
-        "\n"
+        "![](https://www.researchgate.net/profile/Juan-Vasquez-Jaramillo-2/publication/331302522/figure/fig1/AS:729473951481860@1550931551693/Feynman-Diagram-with-Two-Electron-Lines-Emerging-and-entering-a-Vertex-Point-and-One.png)  \n",
+        "\n",
+        "\n",
+        "\n",
+        "[^Lancaster]: Lancaster (Error fixed in the definition of $a^\\dagger_k$)  \n"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
