Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -131,14 +131,13 @@
         "\n",
         "만일 $n$이 실수 (예를 들면 1.5)라면, 에너지는 0.5, -0.5, -1.5, ... 등으로 $a$를 적용하면서 무한대로 낮아질 수 있다. 이것은 시스템의 에너지가 계속 낮아지면서 외부로 무한대의 에너지를 공급할 수 있으므로, 해가 될 수 없다. 따라서 $n$은 정수이고, $n=0$일 때, ground state가 된다. [^ref1]\n",
         "\n",
+        "\n",
+        "\n",
         "<div>\n",
         "<img src=\"https://www.researchgate.net/profile/Ryan-Parker-10/publication/332370544/figure/fig2/AS:792192213843969@1565884750349/Diagram-to-represent-the-discrete-energy-levels-of-a-quantum-harmonic-oscillator-of.ppm\" width=\"500\"/>\n",
         "</div>\n",
         "\n",
-        "\n",
-        "[^ref1]: See details:  \n",
-        "    https://www.mindnetwork.us/quantum-harmonic-oscillator-ladder-operators.html  \n",
-        "\n"
+        "[^ref1]: See details: https://www.mindnetwork.us/quantum-harmonic-oscillator-ladder-operators.html  \n"
       ],
       "metadata": {
         "id": "dAIHJoVF0d8f"
@@ -209,7 +208,9 @@
         "$$\n",
         "\n",
         "\n",
-        "## 3-dimensional phonon with vibration mode ($s$)\n",
+        "## 3-dimensional phonon with vibration mode\n",
+        "\n",
+        "3차원에서 phonon은 3방향의 vibration mode를 갖는다. [^Marino]\n",
         "\n",
         "$$\n",
         "x\\to \\mathbf r\\\\\n",
@@ -224,8 +225,6 @@
         "$\\mathbf e_s$: unit vector for vibration mode (1 longitudinal 2 transverse)  $$\n",
         "[a_{\\mathbf kr},a^\\dagger_{\\mathbf k's}]=\\delta_{\\bf kk'}\\delta_{rs}\n",
         "$$\n",
-        "\n",
-        "ref: Marino  \n",
         "\n",
         "## electron field  \n",
         "\n",
@@ -251,7 +250,7 @@
         "H = \\int d^3x{1\\over N}\\sum_{\\bf R}\\rho(\\mathbf x)V({\\bf x-X)}\\tag{3.47}\n",
         "$$\n",
         "\n",
-        "Taylor expansion about $\\bf r_R$:   \n",
+        "$\\bf r_R$에 대해 1차항까지 테일러 전개하면 다음과 같다.     \n",
         "$$\n",
         "H = \\int d^3x{1\\over N}\\sum_{\\bf R}\\rho(\\mathbf x)\n",
         "\\left[\n",
@@ -285,7 +284,9 @@
         "\n",
         "\n",
         "\n",
-        "[^Lancaster]: Lancaster (Error fixed in the definition of $a^\\dagger_k$)  \n"
+        "[^Lancaster]: Lancaster (Error fixed in the definition of $a^\\dagger_k$)  \n",
+        "\n",
+        "[^Marino]: Marino"
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
@@ -1285,8 +1286,15 @@
         "$$\n",
         "\n",
         "이 coherence length는 BCS theory의 cooper pair bound state의 물리적 크기를 나타낸다는 의미를 갖는다. [^Annett]  \n",
-        "    cooper pair distance:  ~수백nm  \n",
-        "    atom distance of metal: ~수A    \n",
+        "\n",
+        ">    cooper pair distance:  ~수백nm  \n",
+        ">    atom distance of metal: ~수A    \n",
+        "\n",
+        "$\\Delta$가 Fermi 에너지보다 훨씬 작기 때문에, coherence length는 $10^{-6} - 10^{-7}$ 정도로 크다. 이것은 atomic dimension보다 100배~1000배 크다. [^solyom]    \n",
+        "\n",
+        "![](https://i.imgur.com/sub4FPJ.png)  \n",
+        "\n",
+        "부피를 기준으로 할경우 1개의 impurity의 영향은 약 $10^{-6}\\sim10^{-9}$ 정도이다. 이것은 작은 perturbation으로 이 때의 에너지가 energy gap $2\\Delta$를 넘어서지 않는다면 scattering은 일어날 수 없고 cooper pair를 파괴하지도 않는다.  \n",
         "\n",
         "Fermi energy가 $\\epsilon_F\\sim1\\text{ eV}$ 이고 energy gap이 $\\Delta\\sim 1 \\text{meV}$인 저온의 conventional superconductor에서 cooper pair의 effective volume내에는 약 $\\sim10^6$ 개의 cooper pair가 중첩되어 있다. [^Kadin2]  \n",
         "\n",
@@ -1309,27 +1317,15 @@
         "      \n",
         "\n",
         "[^Annett]: It is a surprising and very important property of most superconductors that they can remain superconducting even when there are large numbers of impurities making the mean free path $l$ very short. In fact even many alloys are superconducting despite the strongly disordered atomic structure.  \n",
-        "    Annett Ch.1"
+        "    Annett Ch.1\n",
+        "\n",
+        "[^solyom]:  Sólyom Ch 34.\n",
+        "    $$\\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\\tag{34.2.41}\n",
+        "    $$  \n",
+        "    "
       ],
       "metadata": {
         "id": "EMIfHa8I7_hM"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Coherence length\n",
-        "\n",
-        "Cooper pair의 coherece length는 다음과 같다. [^solyom]\n",
-        "$$\n",
-        "\\langle r^2\\rangle = {4\\over3}\\left({\\hbar v_F\\over\\Delta_0}\\right)^2\\tag{34.2.41}\n",
-        "$$\n",
-        "$\\Delta_0$가 Fermi 에너지보다 훨씬 작기 때문에, coherence length는 $10^{-6} - 10^{-7}$ 정도로 크다. 이것은 atomic dimension보다 훨씬 크다.  \n",
-        "\n",
-        "[^solyom]: Sólyom Ch 34."
-      ],
-      "metadata": {
-        "id": "gk24MyX961EU"
       }
     },
     {
