Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -317,8 +317,10 @@
         "\n",
         "$H'$을 $\\eta$에 대해 전개하면,\n",
         "$$\n",
-        "H' = H+\\eta[H,S]+{\\eta^2\\over 2}[[H,S],S]+\\cdots\\\\\n",
-        "=H_0+\\eta(H_1+[H_0,S])+\\eta^2[H_1,S]+{\\eta^2\\over2}[[H_0,S],S]\n",
+        "\\begin{aligned}\n",
+        "H' &= H+\\eta[H,S]+{\\eta^2\\over 2}[[H,S],S]+\\cdots\\\\\n",
+        "&=H_0+\\eta(H_1+[H_0,S])+\\eta^2[H_1,S]+{\\eta^2\\over2}[[H_0,S],S]\n",
+        "\\end{aligned}\n",
         "$$\n",
         "1차 항을 0이되도록 하는 S의 조건은 다음과 같다.\n",
         "$$\n",
@@ -351,13 +353,13 @@
         "추정된 $S$의 $x_{\\bf kq}, y_{\\bf kq}$를 구하기 위해 commutation 값을 계산한다.  \n",
         "\n",
         "$$\n",
-        "\\begin{equation}\n",
-        "[H_e, S] = \\sum_{\\bf k,q}g_{\\bf k,q}(\\epsilon_{\\bf k+q}-\\epsilon_{\\bf k})\n",
+        "\\begin{aligned}\n",
+        "\\;[H_e, S] &= \\sum_{\\bf k,q}g_{\\bf k,q}(\\epsilon_{\\bf k+q}-\\epsilon_{\\bf k})\n",
         "c^\\dagger_{\\bf k+q}c_{\\bf k}(x_{\\bf kq}a_{\\bf q}+y_{\\bf kq}a^\\dagger_{\\bf -q})\\\\\n",
-        "\\;[H_{ph}, S] = \\sum_{\\bf k,q}g_{\\bf k,q}\n",
+        "\\;[H_{ph}, S] &= \\sum_{\\bf k,q}g_{\\bf k,q}\n",
         "c^\\dagger_{\\bf k+q}c_{\\bf k}\n",
         "(-x_{\\bf kq}\\omega_{\\bf q}a_{\\bf q}+y_{\\bf kq}\\omega_{\\bf -q}a^\\dagger_{\\bf -q})\n",
-        "\\end{equation}\n",
+        "\\end{aligned}\n",
         "$$\n",
         "Using the relation $\\omega_{\\bf q}=\\omega_{\\bf -q}$,\n",
         "$$\n",
@@ -375,8 +377,10 @@
         "위의 식이 0이되어야 하는 조건으로부터  $S$를 구할 수 있다. \n",
         "  \n",
         "$$\n",
+        "\\begin{aligned}\n",
         "x_{\\bf kq} = (\\epsilon_{\\bf k}-\\epsilon_{\\bf k+q}+\\omega_{\\bf q})^{-1}\\\\\n",
         "y_{\\bf kq} = (\\epsilon_{\\bf k}-\\epsilon_{\\bf k+q}-\\omega_{\\bf q})^{-1}\n",
+        "\\end{aligned}\n",
         "$$\n",
         "이제 2nd perturbation term을 구한다.\n",
         "$$\n",
@@ -668,7 +672,7 @@
         "\\Lambda \\equiv g^2g(\\epsilon_F)\n",
         "$$\n",
         "\n",
-        "$\\Lambda$는 보통 매우 작아서, 에너지는 Debye energy $\\omega_D$보다 exponentially 적다.  \n",
+        "$\\Lambda$는 보통 매우 작아서, 에너지는 Debye energy $\\omega_D$보다 exponentially 작다.  \n",
         "\n",
         "Debye energy가 100-300K인 것에 비해서 대부분의 metal superconductor에서 $T_c$ 1K 정도로 적어지는 원인이 된다.[^Annett2]  \n",
         "\n",
