Colaboratory를 통해 생성됨

--- a/doc/superconductor/superconductor_study.ipynb
+++ b/doc/superconductor/superconductor_study.ipynb
@@ -166,7 +166,7 @@
         "N개의 lattice마다 반복되는 periodic boundary condition을 가정한다. \n",
         "$$\n",
         "\\begin{align*}\n",
-        "x_j &= {1\\over\\sqrt N}\\sum_k x_ke^{ikja}\\\\\n",
+        "x_j &= {1\\over\\sqrt N}\\sum_k x_ke^{ikja}\\tag{2.48}\\\\\n",
         "p_j &= {1\\over\\sqrt N}\\sum_k p_ke^{ikja}\n",
         "\\end{align*}\n",
         "$$\n",
@@ -197,10 +197,12 @@
         "a^\\dagger_k &=\\sqrt{m\\omega_k\\over2}\n",
         "\\left(x_{-k}-i{p_{-k}\\over m\\omega_k}\\right)\n",
         "\\end{align*}$$\n",
-        "2nd quantization:  \n",
+        "2nd quantization은 다음과 같다.    \n",
         "$$\n",
-        "[a_k, a^\\dagger_{k'}] = \\delta_{k,k'}\\\\\n",
-        "x_k = {1\\over\\sqrt{2m\\omega_k}}(a_k+a^\\dagger_{-k})\n",
+        "\\begin{align*}\n",
+        "\\left[a_k, a^\\dagger_{k'}\\right] &= \\delta_{k,k'}\\\\\n",
+        "x_k &= {1\\over\\sqrt{2m\\omega_k}}(a_k+a^\\dagger_{-k})\\tag{2.62}\n",
+        "\\end{align*}\n",
         "$$ $$\n",
         "H = \\sum_k\\omega_k\\left(\n",
         "a^\\dagger_ka_k+{1\\over2}\n",
@@ -212,10 +214,7 @@
         "\n",
         "3차원에서 phonon은 3방향의 vibration mode를 갖는다. [^Marino]\n",
         "\n",
-        "$$\n",
-        "x\\to \\mathbf r\\\\\n",
-        "ja\\to\\mathbf R\\\\\n",
-        "$$\n",
+        "식(2.48)을 식(2.62)과 합치고, $x\\to \\mathbf r$로, $ja\\to\\mathbf R$로 변경하면 3차원에서의 displacement는 다음과 같다. \n",
         "\n",
         "$$\n",
         "{\\bf r_R} = {1\\over\\sqrt N}\\sum_{\\mathbf k,s}e^{i\\bf k\\cdot R}\n",
@@ -230,11 +229,11 @@
         "\n",
         "$\\sigma$: electron spin  \n",
         "Fourier component of electron field:  \n",
-        "$$\\psi_\\sigma(\\mathbf r)={1\\over\\sqrt N}\\sum_{\\bf k} e^{-i\\bf k\\cdot r}c_{\\bf k\\sigma}\n",
+        "$$\\psi_\\sigma(\\mathbf r)={1\\over\\sqrt N}\\sum_{\\bf k} e^{-i\\bf k\\cdot r}c_{\\bf k\\sigma} \\tag{3.12}\n",
         "$$\n",
         "$c^\\dagger_{\\bf k\\sigma}, c_{\\bf k\\sigma}$: creation and anhilation operator of electron  \n",
         "$$\n",
-        "\\rho(\\mathbf r) = \\sum_\\sigma \\psi^\\dagger_\\sigma(\\mathbf r)\\psi_\\sigma(\\mathbf r)\\\\\n",
+        "\\rho(\\mathbf r) = \\sum_\\sigma \\psi^\\dagger_\\sigma(\\mathbf r)\\psi_\\sigma(\\mathbf r) \\tag{3.13}\n",
         "$$\n",
         "\n",
         "\n",
@@ -258,11 +257,8 @@
         "\\right]\n",
         "$$\n",
         "\n",
-        "Confusing!:  \n",
-        "> Using (3.12), (3.13) and (3.14), we can write it as (3.49)\n",
-        "\n",
-        "Just use (3.12), (3.13)  \n",
-        "\n",
+        " \n",
+        "(3.12)와 (3.13)식을 이용하여 첫번째 항을 구하면 다음과 같다. [^Marino2]\n",
         "First term (electron propagation term:  \n",
         "$$\n",
         "H_{e} = \\sum_{\\bf k,k',\\sigma}c^\\dagger_{\\bf k\\sigma}c_{\\bf k'\\sigma}\n",
@@ -283,10 +279,14 @@
         "![](https://www.researchgate.net/profile/Juan-Vasquez-Jaramillo-2/publication/331302522/figure/fig1/AS:729473951481860@1550931551693/Feynman-Diagram-with-Two-Electron-Lines-Emerging-and-entering-a-Vertex-Point-and-One.png)  \n",
         "\n",
         "\n",
-        "\n",
         "[^Lancaster]: Lancaster (Error fixed in the definition of $a^\\dagger_k$)  \n",
         "\n",
-        "[^Marino]: Marino"
+        "[^Marino]: Marino\n",
+        "\n",
+        "[^Marino2]: Marino  \n",
+        "    > Using (3.12), (3.13) and (3.14), we can write it as (3.49)  \n",
+        "    Confusing!  \n",
+        "    Just use (3.12), (3.13)  "
       ],
       "metadata": {
         "id": "6ApatphlyEcq"
@@ -680,7 +680,7 @@
         "\n",
         "이것은 통상적으로는 볼 수 없는 이상한 현상이다. 왜냐하면 interaction이 없는 두 자유전자의 에너지는 $2\\epsilon_\\mathbf k + 2\\epsilon_F$인데, 두 interacting 전자의 ground state 에너지는 $E + 2\\epsilon_F < 2\\epsilon_F $이기 때문이다. 아무리 interaction이 적더라도, $2\\epsilon_\\mathbf k$ 만큼의 에너지 저하가 일어났다고 볼 수 있다.  \n",
         "\n",
-        "특히 일반적인 3차원에서는 아주 작은 attractive force에서는 bound state를 형성할 수 없다.  (1차원과 2차원에서는 arbitarily small interaction에 대해서도 bound state가 존재한다.)   \n",
+        "특히 일반적인 3차원에서 아주 작은 attractive force로는 bound state를 형성할 수 없다.  (1차원과 2차원에서는 arbitarily small interaction에 대해서도 bound state가 존재한다.)   \n",
         "Superconductor에서 weak interaction이 bound state를 만드는 이유는 전자의 energy가 fermi surface부근에만 존재하고 따라서 에너지 density가 $\\rho(\\epsilon)\\to \\rho(\\epsilon_F)$로서 2차원과 마찬가지로 constant가 되기 때문이다. (See **Appendix - Bounded states of weak potential**.)\n",
         "\n",
         "\n",
@@ -1259,6 +1259,8 @@
         "고온에서의 전자는 lattice 자체와의 interaction으로 momentum이 변화되는 scattering을 겪는다. impurity나 crystal disorder도 마찬가지이다. 이렇게 변화된 전자의 momentum은 conductivity의 저항으로 작용한다.  \n",
         "\n",
         "하지만 절대0도에서는 상황이 다르다. Ground state에서 전자는 momentum을 갖지만 scattering될 수 없다. 왜냐하면 에너지를 얻을 수도, 더 낮은 에너지로 전이할 수도 없기 때문이다. 더 낮은 에너지는 이미 fermi sea에 의해서 다른 electron이 모두 차지하고 있기 때문이다. \n",
+        "\n",
+        "특히 저온에서는 위의 입자모델과 달리 전자의 위치를 특정할 수 없게 된다. Free electron은 momentum eigen state로서 fermi sea를 채우고 있으며, 전자는 여러개의 이온에 걸쳐있게 된다. 기본적으로 free electron은 impurity나 disorder가 아닌 이상 결정의 격자 구조와 충돌하지 않고 이동할 수 있다. \n",
         "\n",
         "## Mean free path of free electron  \n",
         "\n",
